# salience

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml.example  pyproject.toml
docs/: architecture.md
prompts/: classify.md  evaluate_cluster.md  evaluate_single.md  interest.md  rank.md
scheduling/: com.salience.weekly.plist  install.sh
src/salience/: __init__.py  __main__.py  auth.py  classify.py  cli.py  cluster.py  context.py  evaluate.py  format.py  harvest.py  interest.py  models.py  output.py  rank.py  resolve.py
src/salience/config/: __init__.py  loader.py  models.py
tests/unit/: test_classify.py  test_cluster.py  test_config.py  test_context.py  test_evaluate.py  test_format.py  test_harvest.py  test_output.py  test_resolve.py
