[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salience"
version = "0.1.0"
description = "Personal intelligence tool – pull X bookmarks, evaluate against your context, output ranked digests to Obsidian"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Henrique Fernandes" }]
dependencies = [
    "anthropic>=0.49.0",
    "httpx>=0.28.0",
    "tweepy>=4.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
salience = "salience.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/salience"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require API credentials)",
]
